# lotto-picker

./: .gitignore  LICENSE  README.md  extract_games.py  games.json  lotto_analyzer.py
rust_lotto_analyzer/: Cargo.toml  app_schema.sql  lotto_schema.sql
rust_lotto_analyzer/src/: cli.rs  db.rs  logic.rs  main.rs  models.rs
