[package]
name = "rust_lotto_analyzer"
version = "0.1.0"
edition = "2021"

authors = ["Your Name <you@example.com>"]
description = "Lotto Analyzer & Smart Picker CLI with SQLite, inspired by the Python version."

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
anyhow = "1"
